# yukari-bot

./: .env.prod  README.md  bot.py  pyproject.toml
yukari_bot/plugins/media_helper/: __init__.py  rule.py
yukari_bot/plugins/media_helper/repo/: __init__.py  objects.py
