[project]
name = "yukari-bot"
version = "0.1.0"
description = "yukari-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "nonebot-plugin-orm>=0.7.6",
]

[tool.nonebot]
adapters = [
    # { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "Console", module_name = "nonebot.adapters.console"}
]
plugins = []
plugin_dirs = ["yukari_bot/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
